<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_baseline_movie_24"
        android:title="@string/movie" />

    <item
        android:id="@+id/navigation_tv_series"
        android:icon="@drawable/ic_baseline_tv_series_24"
        android:title="@string/tv_series" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorite" />

</menu>